- Fixed error visibility timing - Fixed checkbox toggle and retoggle issues

--- a/src/styles/components/authentication/shared/_password.scss
+++ b/src/styles/components/authentication/shared/_password.scss
@@ -1,4 +1,9 @@
 .usa-password {
+  > .usa-grid {
+    padding-left: 0rem;
+    padding-right: 0rem;
+  }
+
   .usa-form,
   .usa-form-large {
     position: relative;
@@ -87,6 +92,12 @@
           }
         }
       }
+    }
+  }
+
+  .ng-untouched {
+    .icon {
+      visibility: hidden;
     }
   }
 }
